--- a/Fashion_MNIST-master/Fasion_MNSIT.ipynb
+++ b/Fashion_MNIST-master/Fasion_MNSIT.ipynb
@@ -702,7 +702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Total number of Items in Each Label Clas"
+    "### Total number of Items in Each Label Class"
    ]
   },
   {
